--- a/3356-java-web-front-main/css/home.css
+++ b/3356-java-web-front-main/css/home.css
@@ -1,12 +1,5 @@
 body {
-    background: linear-gradient(180.61deg,
-            #000000 25.16%,
-            #04254f 80%,
-            #409ecd 100%);
-    background-repeat: no-repeat;
-    background-size: cover;
-
-
+    background: black;
 }
 
 h1 {
