--- a/3356-java-web-front-main/css/home.css
+++ b/3356-java-web-front-main/css/home.css
@@ -1,5 +1,5 @@
 body {
-    background: black;
+    background: gray;
 }
 
 h1 {
@@ -12,7 +12,7 @@ h1 {
 
 select,
 option {
-    background-color: black;
+    background-color: gray;
     color: white;
     font-size: 24px;
     padding: 0 1em;
@@ -56,10 +56,10 @@ main {
 .lista {
     list-style-type: none;
     margin: 1em 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-
-    gap: 1em;
+    display: flex;
+    gap: 4em;
+    max-width: 100vw;
+    overflow: auto;
 }
 
 .lista li img {
@@ -77,6 +77,4 @@ main {
         overflow: hidden;
         overflow-x: scroll;
     }
-
-
 }
